[tool.poetry]
name = "py-masstranfer"
version = "0.1.0"  # semantic-release
description = "Educational project to tech mass transfer"
authors = ["EverVino <evervino00@gmail.com>"]
packages = [
  {include = "py_masstranfer", from="src"},
]
license = "Other"
exclude = [
  ".git/*",
  ".env*",
]

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.dev-dependencies]
urllib3 = "<2"  # fix poetry issues
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.2"
ruff = "^0.0.278"
ipython = "<8"
ipykernel = ">=6.0.0"
Jinja2 = "^3.1.2"
mkdocs = "^1.4.3"
mkdocs-exclude = "^1.0.2"
mkdocs-jupyter = "^0.24.1"
mkdocs-literate-nav = "^0.6.0"
mkdocs-macros-plugin = ">=0.7.0,<1"
mkdocs-material = "^9.1.15"
mkdocstrings = "^0.21.2"
mkdocstrings-python = "^1.1.2"



[tool.black]
line-length = 79
target-version = ["py38"]
force-exclude = '''(?x)(
    docs/*
  | .*\\.egg-info
)'''  # TOML's single-quoted strings do not require escaping backslashes

[tool.isort]
ensure_newline_before_comments = true
line_length = 79
multi_line_output = 3
include_trailing_comma = true
skip_glob = ["docs/*", "*.egg-info"]

[tool.ruff]
line-length = 79
force-exclude = true
src = ["src/py_masstranfer"]
exclude = [
  'docs',
]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "D",   # pydocstyle
  "YTT", # flake8-2020
  "RUF", # Ruff-specific rules
  "I001",  # isort
]
fixable = ["I001"]

[tool.ruff.pydocstyle]
convention = "numpy"
